--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -8,5 +8,15 @@ pipeline {
         sh 'node --version'
       }
     }
+    stage('Hello World') {
+      steps {
+        script {
+          writeFile file: 'hello.js', text: '''
+            console.log("Hello, World from Node.js!");
+          '''
+          sh 'node hello.js'
+        }
+      }
+    }
   }
 }
